r1.yaml
apiVersion: v1

kind: Pod

metadata:

  name: nginx

spec:

  containers:

  - name: nginx

    image: nginx:latest

    ports:

    - containerPort: 80

    resources:

      requests:

        memory: "256Mi"

        cpu: "100m"

      limits:

        memory: "512Mi"

        cpu: "200m"
