mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: duni-back
  namespace: chandana-ns 
spec:
  replicas: 1
  selector: 
    matchLabels:
      apps: uni
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template: 
    metadata:
      labels:
        apps: uni
    spec: 
      containers:
        - name: mysql-cont 
          image: mysql
          ports:
            - containerPort: 3306
          resources:
            requests: 
              memory: "400Mi"
              cpu: "200m"
            limits:
              memory: "400Mi"
              cpu: "200m"
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: chandana-pvc   
---
apiVersion: v1 
kind: Service 
metadata:
  name: mysql-ser 
  namespace: chandana-ns
spec:
  selector:
    apps: uni 
  ports:
  - targetPort: 3306
    port: 3306
  type: ClusterIP
