constraint-image.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allow-only-nginx
spec:
  match:
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
